# abackup

./: .coverage  .gitignore  LICENSE.txt  README.md  covout.txt  pyproject.toml  testout.txt
.github/workflows/: ci.yml
docs/: README.md
docs/architecture/: component-architecture.md  data-flow.md  state-management.md
docs/design/: design-system.md
docs/features/: implemented.md  roadmap.md
docs/plans/: 2026-07-12-backupper-7zip-plan.md  2026-07-12-backupper-archive-format-choice-plan.md  2026-07-12-backupper-cli-plan.md  2026-07-12-backupper-job-label-plan.md  2026-07-12-backupper-progress-display-plan.md  2026-07-12-backupper-realtime-progress-plan.md  2026-07-12-backupper-run-all-batch-plan.md  2026-07-12-backupper-settings-plan.md
docs/reviews/: 2026-07-13-technical-review.md  issues-improvements.md
src/abackup/: __init__.py  cli.py  config.py  models.py
src/abackup/core/: __init__.py  archive.py  backup.py  compression.py  copy.py  filters.py  history.py  jobs.py  notify.py  paths.py  platform_task.py  progress.py  retention.py  runner.py  scheduler.py  validation.py
src/abackup/tui/: app.py
src/abackup/utils/: __init__.py  logging.py
src/backupper/: __main__.py  cli.py  config.py  models.py
src/backupper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/backupper/core/: archive.py  backup.py  compression.py  copy.py  (+6 more)
tests/: conftest.py  test_archive.py  test_backup.py  test_cli.py  test_compression.py  test_config.py  test_copy.py  test_discovery.py  test_filters.py  test_history.py  test_jobs.py  test_logging.py  test_models.py  test_notify.py  test_paths.py  test_platform_task.py  test_progress.py  test_project_meta.py  test_readme.py  test_retention.py  test_runner.py  test_scheduler.py  test_tui.py  test_validation.py
(+16 files in other folders)
