[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "abackup"
version = "0.1.0"
description = "Full-featured CLI backup app with a terminal user interface"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.60",
    "platformdirs>=4.0",
    "rich>=13.0",
    "py7zr>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "freezegun>=1.5",
]

[project.scripts]
abackup = "abackup.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
asyncio_mode = "auto"
