[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "abackup"
version = "0.2.0"
description = "Full-featured CLI backup app with a terminal user interface"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.60",
    "platformdirs>=4.0",
    "rich>=13.0",
    "py7zr>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "freezegun>=1.5",
    "ruff>=0.5",
]

[project.scripts]
abackup = "abackup.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["B008", "B904", "UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.ruff.format]
quote-style = "double"
